--- a/README
+++ b/README
@@ -1,22 +1,38 @@
-"----------------------------------------"
-" vim addon for highlight OpenFOAM cases "
-" Language:     OpenFOAM Case Files      "
-" Maintainer:   Tobias Holzmann          "
-" Last Change:  October 2014	         "
-" Version:      1.1	                 "
-" File:         Readme	                 "
-"----------------------------------------"
+# README #
 
-Any questions: mailto:Tobias.Holzmann@holzmann-cfd.de
+This README  includes the steps which are necessary to get this application up and running.
 
-	Colors and Highlight
-	-> to use a other scheme change the scripts.vim file by editing the colorscheme
-	-> test around with the color/*.vim files to get your own colorscheme
-	
+### OpenFOAM Versions ###
+* Generated for all versions
 
-	Update
-	-> if you update the syntax/openfoam.vim file you can sent me your extension lines
-	   so that I can implement it on the files :)
+### What is this repository for? ###
+* This extension to the vim editor allows you to highlight a lot of OpenFOAM keywords
+* Version 1.0
+* Developed by [Holzmann-cfd](https://holzmann-cfd.de)
 
-	
-	Keep foaming
+### How do I get set up? ###
+* Feel free to compile it where ever you want, but normally its nice to have a fixed folder for _user compiled stuff_
+* Make a new folder
+> mkdir -p $FOAM_RUN/../OpenFOAM_extensions
+* Switch to the new folder
+> cd $FOAM_RUN/../OpenFOAM_extensions
+* Clone the repository to the new folder
+> git clone https://shor-ty@bitbucket.org/shor-ty/vimExtensionOpenFOAM.git
+* Switch to the repository directory
+> cd vimExtensionOpenFOAM
+* Install the extension by using the _install_ script
+> ./install
+* Finished
+
+
+### Change color and keywords ###
+* If you have questions, hints or any suggestions please email me
+* If you want to change the colors you can change the following file
+> ./vim/color/*.vim
+* Additionally you can copy paste one file and make your own colorscheme. To use it change it in
+> ./vim/scripts.vim
+* If you insert more keywords you can make a new branch or merge to the master
+
+### Thanksgiving ###
+* Bernhard Gscheider
+* Karl-Johan Nogenmyr
