Update the keywords for OpenFOAM-2.3.x
SOLVER update
SCHEMES update
SNAPPYHEXMESH update
BOUNDARY TYPE update
BOUNDARY PATCH update

--- a/install
+++ b/install
@@ -1,10 +1,8 @@
 #!/bin/bash
 #"----------------------------------------"
-#" vim extension OpenFOAM cases           "
-#" Language:     OpenFOAM Case Files      "
-#" Maintainer:   Tobias Holzmann          "
-#" Last Change:  March, 2013	          "
-#" Version:      2.2.x	                  "
+#" Contributor:  Tobias Holzmann          "
+#" Last Change:  October 2014             "
+#" Version:      2.0	                  "
 #" File:         install                  "
 #"----------------------------------------"
 #
@@ -12,8 +10,6 @@
 # openfoamcolor*.vim ---> $HOME/.vim/colors/ 
 # openfoam.vim       ---> $HOME/.vim/syntax/
 # scripts.vim        ---> $HOME/.vim/
-#
-#
 
 cd ${0%/*} || exit 1  # run from this directory
 
@@ -21,8 +17,8 @@ echo "
 \"----------------------------------------\"
 \" vim addon for highlight OpenFOAM cases \"
 \" Maintainer:   Tobias Holzmann          \"
-\" Last Change:  March, 2013              \"
-\" Version:      2.2.x	                  \"
+\" Last Change:  October 2014             \"
+\" Version:      2.0	                  \"
 \"----------------------------------------\"
 "
 
@@ -48,11 +44,8 @@ cp -u colors/* $HOME/.vim/colors/
 
 
 echo "
-vimExtensionOpenFOAM is ready to use 
-cholorscheme is set for dark background
-you can use other colorschemes from .vim/colors/ or creating your own 
-
-For changing the colorschemes edit the scripts.vim file
-For more informations open the readme file
+vimExtensionOpenFOAM is ready to use...
+Have a nice day... 
+Tobi, alias Shorty 
 "
 
