README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-# README #
+# Welcome #
 
-This README  includes the steps which are necessary to get this application up and running.
+This short intruduction includes the steps which are necessary to get this application up and running.
 
 ### OpenFOAM Versions ###
 * Generated for all versions
