--- a/install
+++ b/install
@@ -1,26 +1,21 @@
 #!/bin/bash
 #"----------------------------------------"
 #" Contributor:  Tobias Holzmann          "
-#" Last Change:  October 2014             "
-#" Version:      2.0	                  "
+#" Last Change:  November 2014            "
+#" Version:      2.1	                  "
 #" File:         install                  "
 #"----------------------------------------"
-#
-# If the script is not working, put the files into the right folders
-# openfoamcolor*.vim ---> $HOME/.vim/colors/ 
-# openfoam.vim       ---> $HOME/.vim/syntax/
-# scripts.vim        ---> $HOME/.vim/
-# insert ':set tabstop=4 shiftwidth=4 expandtab' to .vimrc » if the file does not exist create it
+
 
 cd ${0%/*} || exit 1  # run from this directory
 
 echo "
-\"----------------------------------------\"
-\" vim addon for highlight OpenFOAM cases \"
-\" Maintainer:   Tobias Holzmann          \"
-\" Last Change:  October 2014             \"
-\" Version:      2.0                      \"
-\"----------------------------------------\"
+\"-----------------------------------------\"
+\" vim addon for highlight OpenFOAM files  \"
+\" Contributor:  Tobias Holzmann           \"
+\" Last Change:  November 2014             \"
+\" Version:      2.1                       \"
+\"-----------------------------------------\"
 "
 
 # color definition
@@ -40,24 +35,33 @@ fi
 if [ ! -d $HOME/.vim/colors ]; then
 	mkdir $HOME/.vim/colors
 fi
+if [ ! -d $HOME/.vim/syntax/openfoam ]; then
+	mkdir $HOME/.vim/syntax/openfoam
+fi
 
 # Checking out the files for update
 
-cp -u syntax/openfoam.vim $HOME/.vim/syntax/
+cp -ur syntax/* $HOME/.vim/syntax/
 cp -u scripts.vim $HOME/.vim/
 cp -u colors/* $HOME/.vim/colors/
 
 if [ ! -f $HOME/.vimrc ]; then
     echo -e "${green}No \$HOME/.vimrc found » created${nc}"
-    echo ":set tabstop=4 shiftwidth=4 expandtab" > $HOME/.vimrc
+    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4' >> $HOME/.vimrc
+
 else
-    echo -e "${red}There is an existing \$HOME/.vimrc file" 
-    echo -e "${green}The following lines are insert to the last line: ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
-    echo ":set tabstop=4 shiftwidth=4 expandtab" >> $HOME/.vimrc
+    echo -e "${red}There is an existing \$HOME/.vimrc file"
+
+    if grep -Fq "vim Extension OpenFOAM" $HOME/.vimrc; then
+        echo "Entry of vim Extenion OpenFOAM in $HOME/.vimrc found » nothing to do"
+
+    else 
+        echo -e "${green}The following lines are insert to the last line: ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
+        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4' >> $HOME/.vimrc
+    fi
 fi
 
-
-echo -e "
+echo -e "${nc}
 vimExtensionOpenFOAM is ready to use...
 Have a nice day... 
 Tobias Holzmann"
