--- a/install
+++ b/install
@@ -7,6 +7,8 @@
 #"----------------------------------------"
 
 
+#-------------------------------------------------------------------------------
+
 cd ${0%/*} || exit 1  # run from this directory
 
 echo "
@@ -18,12 +20,15 @@ echo "
 \"-----------------------------------------\"
 "
 
-# color definition
+# Color definition for nice output and playing with bash
+#-------------------------------------------------------------------------------
 red='\e[0;31m'
 green='\e[0;32m'
 nc='\e[0m'
 
-# Checking out the .vim directory and create if not exist
+
+# Checking if .vim directories are available and create if bool = false
+#-------------------------------------------------------------------------------
 if [ ! -d $HOME/.vim ]; then
 	mkdir $HOME/.vim
 fi
@@ -35,34 +40,49 @@ fi
 if [ ! -d $HOME/.vim/colors ]; then
 	mkdir $HOME/.vim/colors
 fi
-if [ ! -d $HOME/.vim/syntax/openfoam ]; then
-	mkdir $HOME/.vim/syntax/openfoam
+if [ ! -d $HOME/.vim/syntax/foam256 ]; then
+	mkdir $HOME/.vim/syntax/foam256
 fi
 
-# Checking out the files for update
 
+# Copy files only if the copied files are newer [-u] 
+#-------------------------------------------------------------------------------
 cp -ur syntax/* $HOME/.vim/syntax/
 cp -u scripts.vim $HOME/.vim/
 cp -u colors/* $HOME/.vim/colors/
 
+
+# Check if .vimrc exist, if not create one and 
+# insert stuff, otherwise just add the stuff to the end of the file
+# TODO - check if the input lines still available!
+#-------------------------------------------------------------------------------
 if [ ! -f $HOME/.vimrc ]; then
     echo -e "${green}No \$HOME/.vimrc found » created${nc}"
-    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4' >> $HOME/.vimrc
+    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4'
+		 \ >> $HOME/.vimrc
 
 else
     echo -e "${red}There is an existing \$HOME/.vimrc file"
 
     if grep -Fq "vim Extension OpenFOAM" $HOME/.vimrc; then
-        echo "Entry of vim Extenion OpenFOAM in $HOME/.vimrc found » nothing to do"
+        echo "Entry of vim Extenion OpenFOAM in $HOME/.vimrc 
+			  found » nothing to do"
 
     else 
-        echo -e "${green}The following lines are insert to the last line: ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
-        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4' >> $HOME/.vimrc
+        echo -e "${green}The following lines are insert to the last line:
+			     ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
+        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4'
+			 \ >> $HOME/.vimrc
     fi
 fi
 
+
+# All done, say goodbye and be polite
+#-------------------------------------------------------------------------------
 echo -e "${nc}
 vimExtensionOpenFOAM is ready to use...
 Have a nice day... 
 Tobias Holzmann"
 
+
+#-------------------------------------------------------------------------------
