--- a/install
+++ b/install
@@ -1,22 +1,23 @@
 #!/bin/bash
-#"----------------------------------------"
-#" Contributor:  Tobias Holzmann          "
-#" Last Change:  November 2014            "
-#" Version:      2.1	                  "
-#" File:         install                  "
-#"----------------------------------------"
+#----------------------------------------"
+# Contributor:  Tobias Holzmann          "
+# Last Change:  November 2014            "
+# Version:      3.0                      "
+# Email: Tobias.Holzmann@Holzmann-cfd.de "
+#----------------------------------------"
 
 
 #-------------------------------------------------------------------------------
 
-cd ${0%/*} || exit 1  # run from this directory
+
+cd ${0%/*} || exit 1
 
 echo "
 \"-----------------------------------------\"
 \" vim addon for highlight OpenFOAM files  \"
 \" Contributor:  Tobias Holzmann           \"
 \" Last Change:  November 2014             \"
-\" Version:      2.1                       \"
+\" Version:      3.0                       \"
 \"-----------------------------------------\"
 "
 
@@ -30,18 +31,18 @@ nc='\e[0m'
 # Checking if .vim directories are available and create if bool = false
 #-------------------------------------------------------------------------------
 if [ ! -d $HOME/.vim ]; then
-	mkdir $HOME/.vim
+    mkdir $HOME/.vim
 fi
 
 if [ ! -d $HOME/.vim/syntax ]; then
-	mkdir $HOME/.vim/syntax
+    mkdir $HOME/.vim/syntax
 fi
 
 if [ ! -d $HOME/.vim/colors ]; then
-	mkdir $HOME/.vim/colors
+    mkdir $HOME/.vim/colors
 fi
 if [ ! -d $HOME/.vim/syntax/foam256 ]; then
-	mkdir $HOME/.vim/syntax/foam256
+    mkdir $HOME/.vim/syntax/foam256
 fi
 
 
@@ -58,21 +59,21 @@ cp -u colors/* $HOME/.vim/colors/
 #-------------------------------------------------------------------------------
 if [ ! -f $HOME/.vimrc ]; then
     echo -e "${green}No \$HOME/.vimrc found » created${nc}"
-    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4'
-		 \ >> $HOME/.vimrc
+    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4 expandtab'
+         \ >> $HOME/.vimrc
 
 else
     echo -e "${red}There is an existing \$HOME/.vimrc file"
 
     if grep -Fq "vim Extension OpenFOAM" $HOME/.vimrc; then
         echo "Entry of vim Extenion OpenFOAM in $HOME/.vimrc 
-			  found » nothing to do"
+              found » nothing to do"
 
     else 
         echo -e "${green}The following lines are insert to the last line:
-			     ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
-        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4'
-			 \ >> $HOME/.vimrc
+                 ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
+        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4 expandtab'
+             \ >> $HOME/.vimrc
     fi
 fi
 
