--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+#####
+##### Attention
+#####
+This is a fork of https://bitbucket.org/shor-ty/vimextensionopenfoam/overview by Tobias Holzmann.
+I want to make it compatible to vundle for automatic deployment on new machines. 
+This is not yet the case. For the latest version, feedback etc. please contact Mr Holzmann on his aforementioned repo.
+
+
+
+
+
 # Welcome #
 
 This short intruduction includes the steps which are necessary to get this application up and running.
