--- a/README
+++ b/README
@@ -1,12 +1,19 @@
 #####
 ##### Attention
 #####
-This is a fork of https://bitbucket.org/shor-ty/vimextensionopenfoam/overview by Tobias Holzmann.
-I want to make it compatible to vundle for automatic deployment on new machines. 
-This is not yet the case. For the latest version, feedback etc. please contact Mr Holzmann on his aforementioned repo.
-Further I'm working on enhancements to get it compatible with solarized
+This is a fork of https://bitbucket.org/shor-ty/vimextensionopenfoam/overview by Tobias Holzmann
+with the aim of reaching Pathogene/Vundle compatibility aswell as Colorscheme neutrality.
+Right now Pathogene/Vundle compatibility works but the changes break autocomplete-compatibility
+for non-vundle/pathogene installs.
+The colorscheme is still available but by default vim will use YOUR colorscheme and not the supplied one.
 
-
+Installation with vundle (https://github.com/gmarik/Vundle.vim) is as easy as adding it to your .vimrc
+with
+"Plugin effi/vim-OpenFoam-syntax"
+or
+"Plugin git://bitbucket.org/effi-x/vim-openfoam-syntax.git"
+It is highly recommended to use the great solarized theme/colorscheme by ethan schoonover at
+http://ethanschoonover.com/solarized
 
 
 # Welcome #
