--- a/install
+++ b/install
@@ -49,9 +49,11 @@ fi
 
 # Copy files only if the copied files are newer [-u] 
 #-------------------------------------------------------------------------------
+echo -n 'All necessary files are copied now...'
 cp -ur syntax/* $HOME/.vim/syntax/
 cp -u ftdetect/scripts.vim $HOME/.vim/
 cp -u colors/* $HOME/.vim/colors/
+echo 'done'
 
 
 # Check if .vimrc exist, if not create one and 
@@ -60,10 +62,15 @@ cp -u colors/* $HOME/.vim/colors/
 #-------------------------------------------------------------------------------
 echo 'Checking if $HOME/.vimrc is available'
 if [ ! -f $HOME/.vimrc ]; then
-    echo -e "${green}Not available \$HOME/.vimrc » created${nc}"
-    echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4 expandtab' > $HOME/.vimrc
-    echo $'"- vim Extension OpenFOAM, if you have no colorscheme set to 1\n:let g:foam_use_custom_colors=0'
-         \ >> $HOME/.vimrc
+    echo -e "   + ${green}Not available \$HOME/.vimrc » its gonna be created${nc}"
+    echo -e '   + The following lines will be inserted:'
+    echo    '       :set tabstop=4 shiftwidth=4 expandtab'
+#    echo    '       :let g:foam_use_custom_colors=0'
+#    echo    '   + If you have no colorscheme set the value to 1 (foam_use_custom_colors=1)'
+
+    #- Insert the lines
+    echo -e '"- vim Extension OpenFOAM\n:set tabstop=4\n:set shiftwidth=4\n:set expandtab' > $HOME/.vimrc
+#    echo '"- vim Extension OpenFOAM, if you have no colorscheme set to 1\n:let g:foam_use_custom_colors=0' >> $HOME/.vimrc
 
 else
     echo -e "${red}There is an existing \$HOME/.vimrc file"
@@ -73,11 +80,10 @@ else
               found » nothing to do"
 
     else 
-        echo -e "${green}The following lines are inserted at the end of the file:
-                 ':set tabstop=4 shiftwidth=4 expandtab'${nc}"
-        echo $'"- vim Extension OpenFOAM\n:set tabstop=4 shiftwidth=4 expandtab'
-        echo $'"- vim Extension OpenFOAM, if you have no colorscheme set to 1\n:let g:foam_use_custom_colors=0'
-             \ >> $HOME/.vimrc
+        echo -e "    ${green}+ The following lines are inserted at the end of the file:"
+	echo -e "        :set tabstop=4 shiftwidth=4 expandtab${nc}"
+    	echo -e '"- vim Extension OpenFOAM\n:set tabstop=4\n:set shiftwidth=4\n:set expandtab' >> $HOME/.vimrc
+#        echo '"- vim Extension OpenFOAM, if you have no colorscheme set to 1\n:let g:foam_use_custom_colors=0' >> $HOME/.vimrc
     fi
 fi
 
