++ Added new colorscheme ++ Updated Readme and Install ++ Updated files

--- a/install
+++ b/install
@@ -1,10 +1,12 @@
 #!/bin/bash
-#-----------------------------------------------"
-# Contributor:  Tobias Holzmann                 "
-# Last Change:  May 2015                        "
-# Version:     	4.0                             "
-# Email: 	Tobias.Holzmann@Holzmann-cfd.de "
-#-----------------------------------------------"
+#
+#----------------------------------------------#
+# Contributor: Tobias Holzmann                 #
+# Last Change: December 2016                   #
+#----------------------------------------------#
+# Location:    www.Holzmann-cfd.de             #
+# Email:       Tobias.Holzmann@Holzmann-cfd.de #
+#----------------------------------------------#
 
 
 #-------------------------------------------------------------------------------
